carga de casos de prueba en main